iron-gallery/iron-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: iron-gallery
  name: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
       run: iron-gallery
    spec:
      volumes:
      - name: config
        emptyDir: {}
      - name: images
        emptyDir: {}
      containers:
      - image: kodekloud/irongallery:2.0
        name: irongallery
        resources:
         limits:
          memory: "100Mi"
          cpu: "50m"
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/data
        - name: images
          mountPath: /usr/share/nginx/html/uploads
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: iron-gallery-service
  name: iron-gallery-service
spec:
  ports:
  - name: 80-80
    nodePort: 30099
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: iron-gallery
  type: NodePort
status:
  loadBalancer: {}
